<resources>
    <string name="texto_universidad_valladolid">Universidad de Valladolid</string>
    <string name="texto_centro_federico_wattenberg">Centro de estudios Vacceos\nFederico Wattenberg</string>
    <string name="texto_boton_regresar">Volver</string>
    <string name="texto_boton_siguiente">Siguiente</string>
    <string name="texto_select_visit_visita_personalizada">Visita personalizada</string>
    <string name="minutos"> min</string>
    <string name="horas"> hora</string>
    <string name="app_name">Pintia Tour</string>
    <string name="texto_boton_arquitectura_visita_personalizada">Arquitectura</string>
    <string name="texto_boton_funerario_visita_personalizada">Funerario</string>
    <string name="texto_boton_militar_visita_personalizada">Militar</string>
    <string name="texto_boton_costumbres_visita_personalizada">Costumbres</string>
    <string name="texto_boton_curiosidades_visita_personalizada">Curiosidades</string>
    <string name="texto_loading_app_pintia_tour">Pintia Tour</string>
    <string name="texto_select_visit_idioma">Idiomas</string>
    <string name="texto_select_visit_visita_express">Visita express 1 hora</string>
    <string name="texto_select_visit_contacto">Contacto</string>
    <string name="texto_ubicacion_pintia">Aqui nos encontramos</string>
    <string name="texto_contacto_mas_info">Para más información y visitas guiadas llame a:</string>
    <string name="texto_contacto_telefono">983 88 12 40</string>
    <string name="web_pintia">https://www.pintiavaccea.es</string>
    <string name="texto_contacto_web_pintia">Visita nuestra web!</string>
    <string name="texto_visita_express">Visita express</string>
    <string name="texto_consejo_girar_movil">Por favor, sitúe su teléfono móvil de forma horizontal para comenzar con la visita</string>
    <string name="texto_duracion_visita_personalizada">Duracion</string>
    <string name="texto_minutos_duracion_visita_personalizada">10</string>
    <string name="texto_tipo_visita_personalizada">Tipo</string>
    <string name="texto_temas_visita_personalizada">Elija uno o varios temas de visita:</string>
    <string name="texto_temas_requeridos">Elija al menos un tema</string>
    <string name="texto_inicial_punto_inicial">Bienvenido a Pintia, mi nombre es Ambatus. Es un honor recibirle hoy en esta tierra que guarda las huellas de mis ancestros y así podrá descubrir el alma de mi pueblo.\n\nPintia es mucho más que un yacimiento, es el testimonio de un pueblo que valoraba el coraje, la vida comunitaria y la conexión con la naturaleza.</string>
    <string name="texto_dirijase_punto_punto_siguiente_mapa">Diríjase al punto señalado en el mapa, pulse la imagen para ir a Google Maps</string>
    <string name="texto_principal_arquitectura_punto_siguiente_contenido_0">Las viviendas vacceas, de entre 30 y 100 metros cuadrados, variaban según su función y estatus. Las pequeñas incluían vestíbulo, cocina y almacén, mientras que las más grandes podían tener hasta siete habitaciones. Construidas con adobe y tapial, sus muros se recubrían de barro, a veces pintados en blanco y rojo, reflejando una estética funcional y decorativa.</string>
    <string name="texto_principal_arquitectura_punto_siguiente_contenido_1">Las casas se levantaban sobre durmientes de madera encajados en zanjas. Los techos se construían con vigas vegetales recubiertas de barro, mientras que los suelos empleaban arcilla mezclada con cerámica o cantos rodados para garantizar resistencia. Este ingenio constructivo destacaba por su adaptación a los recursos locales y las necesidades climáticas.</string>
    <string name="texto_principal_arquitectura_punto_siguiente_contenido_2">Dentro de los hogares, los vacceos disponían de ingeniosos sistemas de almacenamiento, como silos excavados en el suelo o grandes vasijas subterráneas. Estas soluciones no solo optimizaban el uso del espacio, sino que preservaban alimentos y bienes esenciales para la vida cotidiana.</string>
    <string name="texto_principal_arquitectura_punto_siguiente_contenido_3">El sistema defensivo de Pintia destaca por su complejidad y envergadura. Contaba con una muralla de más de un kilómetro de longitud, siete metros de ancho y bastiones en puntos estratégicos. Tras la muralla, una berma de seis metros daba paso a tres fosos consecutivos con una anchura total de 30 metros, diseñados para dificultar el acceso de posibles atacantes.</string>
    <string name="texto_principal_funerario_punto_siguiente_contenido_0">La cremación era una práctica funeraria común entre los vacceos. Tras reducir el cuerpo a cenizas, estas se depositaban en urnas cinerarias junto a ajuares y ofrendas. Este rito simbolizaba el acompañamiento del difunto en su viaje hacia el más allá, marcando la tumba con una estela identificativa.</string>
    <string name="texto_principal_funerario_punto_siguiente_contenido_1">Además de la cremación, los vacceos practicaban la inhumación y la exposición a los buitres. Este último rito reflejaba una profunda conexión simbólica, ya que el buitre era considerado un portador sagrado que guiaba las almas hacia la otra vida.</string>
    <string name="texto_principal_funerario_punto_siguiente_contenido_2">Las tumbas vacceas incluían ajuares cuidadosamente seleccionados, como sonajas, armas y objetos personales, junto a alimentos y otros bienes. Estas ofrendas reflejaban el estatus social del difunto y aseguraban su bienestar en el más allá.</string>
    <string name="texto_principal_funerario_punto_siguiente_contenido_3">En la Necrópolis de Las Ruedas se encontraron ofrendas alimenticias como lácteos, grasas animales, vino aromatizado con sustancias vegetales, miel y aceite. Estas ofrendas tenían un propósito viático, destinadas a acompañar al difunto en el Más Allá. Estas ofrendas serían útiles para el difunto en su vida después de la muerte.</string>
    <string name="texto_principal_militar_punto_siguiente_contenido_0">En la sociedad vaccea, el valor como guerrero no solo se heredaba, sino que se demostraba mediante actos de honor y combate cuerpo a cuerpo. Las armas, cargadas de simbolismo, acompañaban al guerrero tanto en la vida como en la muerte.</string>
    <string name="texto_principal_militar_punto_siguiente_contenido_1">Los vacceos fabricaban sus armas a partir de hierro, un material de gran valor. Estos objetos no solo cumplían una función bélica, sino que también eran símbolos de poder y prestigio dentro de la jerarquía social.</string>
    <string name="texto_principal_militar_punto_siguiente_contenido_2">La oligarquía guerrera controlaba los recursos y las alianzas sociales mediante la redistribución de bienes, como carne y vino, y actividades exclusivas que reforzaban su autoridad y prestigio.</string>
    <string name="texto_principal_militar_punto_siguiente_contenido_3">Según la poliorcética de la Antigüedad, el asedio pudo realizarse de tres formas diferentes:\nRepentina oppugnatio o asalto, suponía un ataque inesperado y repentino para tomar la ciudad.\nObsessio u obsidio, suponía el bloqueo de la ciudad hasta agotar sus recursos.\nLonginqua oppugnatio o asedio prolongado, suponía una combinación de las estrategias anteriores.</string>
    <string name="texto_principal_costumbres_punto_siguiente_contenido_0">Los vacceos obtenían metales preciosos como hierro, oro y bronce mediante el trueque de excedentes agrícolas. Este sistema económico reflejaba su ingenio para gestionar recursos y fortalecer relaciones comerciales.</string>
    <string name="texto_principal_costumbres_punto_siguiente_contenido_1">Actividades como el consumo de carne y vino eran privilegio de la clase dirigente, quienes empleaban estas prácticas para reafirmar su posición de poder y estrechar alianzas con las clases dependientes.</string>
    <string name="texto_principal_costumbres_punto_siguiente_contenido_2">La sociedad vaccea se regía por valores aristocráticos, donde el honor y el simbolismo de los bienes materiales, como armas y joyas, jugaban un papel central en la identidad individual y colectiva.</string>
    <string name="texto_principal_costumbres_punto_siguiente_contenido_3">La cerámica refleja la habilidad y creatividad Vaccea. En el barrio de Carralaceña, cercano al Duero, las piezas eran elaboradas con torno y cocidas en grandes hornos. Estas obras cumplían funciones prácticas y simbólicas, siendo decoradas con técnicas diversas como incisiones, estampados y modelados.</string>
    <string name="texto_principal_curiosidades_punto_siguiente_contenido_0">Los tintinábulos, decorados y colgantes, se usaban como amuletos protectores en puertas y cunas. Su sonido era considerado un elemento protector contra el mal.\n\nEn ocasiones especiales, los guerreros fallecidos eran ofrecidos a los buitres, elevandolos al cielo y simbolizando el regreso del alma al cosmos, un aspecto espiritual profundamente ligado a la naturaleza y al entorno.</string>
    <string name="texto_principal_curiosidades_punto_siguiente_contenido_1">Los vacceos veían en el lobo un guardián protector y en el buitre un guía espiritual hacia el más allá. Estos animales simbolizaban la conexión entre lo terrenal y lo trascendental.\nEn el Samhain celta se honra a los antepasados vacceos y romanos que descansan allí, respetando su memoria y conectando a los visitantes con su legado cultural.</string>
    <string name="texto_principal_curiosidades_punto_siguiente_contenido_2">Encontradas en tumbas junto a ofrendas de carne, estas cajitas con forma de animales podrían haber sido utilizadas como saleros o especieros, reflejando la creatividad y funcionalidad en los objetos funerarios.\n\nUna figura contemporánea,"El Señor de la Bellota", se erige en Pintia como guardián simbólico. Fue creada para desalentar el saqueo y fomentar el respeto por el patrimonio arqueológico.</string>
    <string name="texto_principal_curiosidades_punto_siguiente_contenido_3">No es conocido con certeza el número exacto de pueblos Vacceos en la Meseta Norte, no obstante, es posible certificar la existencia de una veintena de municipios ocupados por pueblos Vacceos.</string>
    <string name="texto_pregunta_tematica_punto_siguiente_cuestionario_arquitectura_0">¿Qué empleaban los Vacceos para cimentar sus hogares?</string>
    <string name="texto_respuesta_uno_arquitectura_0">Durmientes y tocones de madera</string>
    <string name="texto_respuesta_dos_arquitectura_0">Soleras de hormigón</string>
    <string name="texto_respuesta_tres_arquitectura_0">Pilotes de hormigón</string>
    <string name="texto_respuesta_cuatro_arquitectura_0">Mezcla entre madera, barro y metales</string>
    <string name="texto_referencia_respuesta_uno_arquitectura_0">Cimentación tipo A[Fotografía]</string>
    <string name="texto_referencia_respuesta_dos_arquitectura_0">Cimentación tipo B[Fotografía]</string>
    <string name="texto_referencia_respuesta_tres_arquitectura_0">Cimentación tipo C[Fotografía]</string>
    <string name="texto_referencia_respuesta_cuatro_arquitectura_0">Cimentación tipo D[Fotografía]</string>
    <string name="texto_pregunta_tematica_punto_siguiente_cuestionario_arquitectura_1">¿Que secciones estaban presentes en sus hogares?</string>
    <string name="texto_respuesta_uno_arquitectura_1">Salón, cocina y patio</string>
    <string name="texto_respuesta_dos_arquitectura_1">Vestíbulo, cocina y almacén</string>
    <string name="texto_respuesta_tres_arquitectura_1">Salón, cocina y baños</string>
    <string name="texto_respuesta_cuatro_arquitectura_1">Vestíbulo, cocina, baños y almacen</string>
    <string name="texto_referencia_respuesta_uno_arquitectura_1">Hogar tipo A[Fotografía]</string>
    <string name="texto_referencia_respuesta_dos_arquitectura_1">Hogar tipo B[Fotografía]</string>
    <string name="texto_referencia_respuesta_tres_arquitectura_1">Hogar tipo C[Fotografía]</string>
    <string name="texto_referencia_respuesta_cuatro_arquitectura_1">Hogar tipo D[Fotografía]</string>
</resources>