<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadingAppActivity"
    android:background="@color/brown_light">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_texto_pintia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texto_pintia_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_loading_app_pintia_tour"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:fontFamily="@font/grandstander_mediana"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_imagen_ciervo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_texto_pintia"
        android:gravity="center">

            <ImageView
                android:id="@+id/imagen_ciervo_pintia_tour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/black"
                android:src="@drawable/imagen_ciervo"
                android:rotation="270"
                android:layout_marginStart="20dp"
                >
            </ImageView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_icono_loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_imagen_ciervo"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen_spinner_loading"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                >
            </ImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_centro_estudios_vacceos_loading_app"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_contenido_principal_personalizada"
            >

            <TextView
                android:id="@+id/texto_centro_estudios_vacceos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/texto_centro_federico_wattenberg"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/grandstander_mediana">
            </TextView>

            <ImageView
                android:id="@+id/imagen_UVa_visita_personalizada"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_cevfw"
                android:layout_marginEnd="15dp">
            </ImageView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_universidad_valladolid_loading_app"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_centro_estudios_vacceos_loading_app"
            >

            <TextView
                android:id="@+id/texto_centro_federico_wattenberg_loading_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/texto_universidad_valladolid"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/grandstander_mediana">
            </TextView>

            <ImageView
                android:id="@+id/imagen_CEVFW_loading_app"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/logotipo_de_la_universidad_de_valladolid"
                android:layout_marginEnd="15dp">
            </ImageView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>